Fix UI Overlap with the loupe icon in the Explore Tab (#26113)

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -5015,7 +5015,6 @@ a.status-card {
     position: absolute;
     top: 16px;
     inset-inline-end: 10px;
-    z-index: 2;
     display: inline-block;
     opacity: 0;
     transition: all 100ms linear;
@@ -8136,6 +8135,7 @@ noscript {
   .search__input {
     border: 1px solid lighten($ui-base-color, 8%);
     padding: 10px;
+    padding-inline-end: 28px;
   }
 
   .search__popout {
